tests/positive/core/narrowing.tx
class Animal {
    name: string;
    constructor(name: string) {
        this.name = name;
    }
}

class Dog extends Animal {
    breed: string;
    constructor(name: string, breed: string) {
        super(name);
        this.breed = breed;
    }
    bark(): void {
        print("Woof");
    }
}

function processAnimal(a: Optional<Animal>): void {
    if (a != None) {
        if (a instanceof Dog) {
            a.bark(); // narrow to Dog
            print(a.breed); // narrow to Dog
        } else {
            print(a.name); // narrow to Animal
        }
    } else {
        print("No animal\n");
    }
}

function processMaybeDog(a: Optional<Animal>): void {
    if (a != None && a instanceof Dog) {
        a.bark();
        print(a.breed);
    }
}

function main(): int {
    let d = new Dog("Buddy", "Golden Retriever");
    processAnimal(d);
    processMaybeDog(d);
    
    let a = new Animal("Generic");
    processAnimal(a);
    processMaybeDog(a);
    
    let noAnimal: Optional<Animal> = None;
    processAnimal(noAnimal);
    processMaybeDog(noAnimal);
    return 0;
}
